--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 </head>
 <body>
   <nav>
+    <div class="left">
+ <a href="/">BuyVI.</a>
+    </div>
+
+    <div class="middle">b
+
+    </div>
+
+    <div class="right">
+c
+    </div>
    
   </nav>
   
