completed nav bar

--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
  <a href="/">BuyVI.</a>
     </div>
 
-    <div class="middle">b
+    <div class="middle">
+      <a href="#">Home</a>
+      <a href="#">Products</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
 
     </div>
 
     <div class="right">
-c
+      <img src="cart.png" alt="cart"/>
+     <img src="PlaceHolder.png" alt="Profile"/>
+     
     </div>
    
   </nav>
