all products are added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="middle">
       <a href="#">Home</a>
-      <a href="#">Products</a>
+      <a href="#products">Products</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
 
@@ -36,6 +36,60 @@
     <div class="container" id="rightContainer">
       <img src="images.jpg" alt="">
     </div>
+  </section>
+  <section  id="products">
+    <h1>Products</h1>
+   <div class="productsContainer">
+    <!-- product 0n1 -->
+    <div class="product">
+      <img src="product1.png" alt="product one">
+      <h4>CYAN T-SHIRT</h4>
+      <h5>$100</h5>
+    </div>
+
+    <div class="product">
+      <img src="product1.webp" alt="product one">
+      <h4>CYAN T-SHIRT</h4>
+      <h5>$100</h5>
+    </div>
+    <div class="product">
+      <img src="product 2.webp" alt="product one">
+      <h4>CYAN T-SHIRT</h4>
+      <h5>$100</h5>
+    </div>
+    <div class="product">
+      <img src="product3.webp" alt="product one">
+      <h4>CYAN T-SHIRT</h4>
+      <h5>$100</h5>
+    </div>
+    <div class="product">
+      <img src="product4.webp" alt="product one">
+      <h4>CYAN T-SHIRT</h4>
+      <h5>$100</h5>
+    </div>
+    <div class="product">
+      <img src="product5.webp" alt="product one">
+      <h4>CYAN T-SHIRT</h4>
+      <h5>$100</h5>
+    </div>
+    <div class="product">
+      <img src="product6.webp" alt="product one">
+      <h4>CYAN T-SHIRT</h4>
+      <h5>$100</h5>
+    </div>
+    <div class="product">
+      <img src="product7.webp" alt="product one">
+      <h4>CYAN T-SHIRT</h4>
+      <h5>$100</h5>
+    </div>
+    <!-- <div class="product">
+      <img src="product8.webp" alt="product one">
+      <h4>CYAN T-SHIRT</h4>
+      <h5>$100</h5>
+    </div> -->
+
+
+  </div>
   </section>
   
 </body>
